--- a/style.css
+++ b/style.css
@@ -72,4 +72,10 @@ button:hover{
     display: inline-block;
 }
 
+.alternative:hover {
+    color: rgb(240, 121, 10);
+}
+.alternative{
+    display: inline-block;
+}
 
