--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     border-top-width: 100px;
 }
 
-button {
+#startButton {
     background-color:darkslategrey;
     font-size: 40px;
     border-radius: 8px;
@@ -52,7 +52,7 @@ button {
 footer {
     background-color: black;
 }
-button:hover{
+#startButton:hover{
     background: red;
     transform: scale(1.3);
 }
