--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-    background-image: url('dungeon.png');
+    background-image: url('./../dungeon.png');
     background-repeat: repeat-x;
     background-size: 100%;
     width: 10000px;
@@ -118,7 +118,5 @@ border-style: dashed;
     position: -webkit-sticky;
     position: sticky;
     left:450px;
-
-
 }
 
