--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 
 #character{
     position: relative;
-    z-index:-1;
+    z-index: 1;
     right: 4500px;
     margin-top: 100px;
     transform: rotateY(180deg);
@@ -29,6 +29,7 @@
     left: 1050px;
     margin-top: 1px;
     margin-bottom: 100px;
+    z-index: 2;
 }
 
 #knight1 {
@@ -102,7 +103,7 @@ background-color: darkmagenta;
 #gameover {
     position: fixed; 
     size: cover;
-    z-index: 1;
+    z-index: 3;
     overflow:hidden;
     height: 100%;
     width: 100%;
@@ -124,4 +125,94 @@ background-color: darkmagenta;
 #restart:hover {
     background-color:green;
     transform: scale(1.3);
+}
+.wrapper {
+    width: 100%;
+    min-height: 800px;
+    position: absolute;
+    display: block;
+    margin-left: 425px;
+    margin-top: 200px;
+}
+.wrapper1 {
+    width: 100%;
+    min-height: 800px;
+    position: absolute;
+    display: block;
+    margin-left: 1150px;
+    margin-top: 199px;
+
+}
+.wrapper2 {
+    width: 100%;
+    min-height: 800px;
+    position: absolute;
+    display: block;
+    margin-left: 1865px;
+    margin-top: 198px;
+
+}
+.red {
+    width: 80px;
+    height: 80px;
+    background: orangered;
+    box-shadow: 0px 0px 10px 5px orangered;
+}
+.orange {
+    left:10px;
+    width: 60px;
+    height: 60px;
+    background: orange;
+    box-shadow: 0px 0px 12px 6px orange;
+}
+.gold {
+    left:18px;
+    width: 45px;
+    height: 45px;
+    background: gold;
+    box-shadow: 0px 0px 9px 4px gold;
+}
+.white {
+    left:22px;
+    width: 35px;
+    height: 35px;
+    background: lightyellow;
+    box-shadow: 0px 0px 9px 4px lightyellow;
+}
+.blue {
+    left:32px;
+    width: 15px;
+    height: 15px;
+    background: darkblue;
+    box-shadow: 0px 0px 15px 10px darkblue;
+}
+.black {
+    left:20px;
+    width: 40px;
+    height: 40px;
+    bottom:-40px;
+    background: black;
+    box-shadow: 0px 0px 15px 10px black;
+}
+.base {
+    border-radius: 50%;
+    position: absolute;
+}
+.flame-wrapper {
+    position: relative;
+    animation: flicker 5s ease-in infinite;
+}
+.flame {
+    bottom: 0;
+    position: absolute;
+    border-radius: 50% 0% 50% 50%;
+    transform: rotate(-45deg);
+}
+@keyframes flicker {
+    0% {transform: rotate(-1deg);}
+    20% {transform: rotate(.5deg) scaley(1.05);}
+    40% {transform: rotate(-1deg);}
+    60% {transform: rotate(1deg);}
+    80% {transform: rotate(-1deg) scaley(0.90);}
+    100% {transform: rotate(1deg);}
 }
