--- a/styles/startpage.css
+++ b/styles/startpage.css
@@ -61,3 +61,30 @@ body, .pushy {
 /* .pushy {
   right: 320px;
 } */
+
+.backDoor {
+  background-color: #333;
+  position:relative;
+  width:400px;
+  height:300px;
+  
+  margin: 0 auto;
+  margin-top:50px;
+}
+
+.door {
+  background-color: darkgray;
+  position:absolute;
+  top:0px;
+  left:0px;
+  width:400px;
+  height:300px;
+ 
+  transform-origin: left;
+ 
+  transition: all 0.5s ease-in-out;
+}
+
+.doorOpen {
+  transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(-105deg);
+}
