--- a/styles/startpage.css
+++ b/styles/startpage.css
@@ -1,5 +1,5 @@
 #startpage-body {
-  background-image: url('/img/brick.png');
+  background-image: url('../img/brick.png');
 }
 
 #start-button-container {
@@ -66,7 +66,7 @@ body, .pushy {
 }
 
 .backDoor {
-  background-image: url('/img/hallway.gif');
+  background-image: url('../img/hallway.gif');
   position:relative;
   width:400px;
   height:300px;
@@ -77,7 +77,7 @@ body, .pushy {
 }
 
 .door {
-  background-image: url('/img/door.png');
+  background-image: url('../img/door.png');
   position:absolute;
   top:0px;
   left:0px;
