--- a/styles/style.css
+++ b/styles/style.css
@@ -90,17 +90,20 @@ footer {
 }
 
 
-.quest-container{
-border: blanchedalmond;
-border-style: dashed;
+#quest-container{
+border: black;
+border-style: solid;
 display:list-item;
 display: inline-block;
 margin-top: 1px;
-background-color: darkmagenta;
+background-color: darkslategray;
+padding: 15px;
 }
-.quest-container li{
+
+#quest-container li{
     position: relative;
-    color: cadetblue;
+    color:black;
+    padding: 3px;
 }
 
 .answers:hover {
