--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 #character{
     position: relative;
     z-index: 1;
-    right: 4500px;
+    right: 13500px;
     margin-top: 100px;
     transform: rotateY(180deg);
     animation: character 3s infinite linear;
@@ -31,27 +31,14 @@
     margin-bottom: 100px;
     z-index: 2;
 }
-#bossknight {
-    position: absolute;
-    left: 1050px;
-    margin-top: 1px;
-    margin-bottom: 100px;
-    z-index: 2;
 
-}
-#knight1 {
-    position: relative;
-    left: 2475px;
-    display: block;
-    margin-bottom: 200px;
-}
 
 body {
 
     background: url('https://mikekuhl.github.io/201Undefined/img/dungeon.png') repeat-x ;
     background-size: 100%;
     background-position-y: top;
-    width: 5000px;
+    width: 14000px;
 }
 
 #startButton {
@@ -104,10 +91,12 @@ padding: 15px;
     position: relative;
     color:black;
     padding: 3px;
+    list-style:circle;
 }
 
-.answers:hover {
+#quest-container li:hover {
     color: rgb(240, 121, 10);
+    transform: scale(1.3);
 }
 
 #gameover {
